<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="stayabode.foodyHive.activities.consumers.IntroScreenActivity"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#112132">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#112132"
        >




        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pagerIntroSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:id="@+id/loginText"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/skipLayout"
            android:layout_marginTop="40dp"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:src="@drawable/skip_arrow_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Skip"
                android:id="@+id/skipText"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/SliderDots"
                android:layout_below="@+id/viewPager"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/slider_dot_selector"
                android:layout_gravity="center"
                app:tabGravity="center"
                android:visibility="gone"
                app:tabIndicatorHeight="0dp"
                />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/create_account_image"
                android:background="@android:color/transparent"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:background="@drawable/lets_go_border_rounded"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/signinorSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Sign up/Sign In"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-OR-Continue with"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/continueText"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fb_icon"
                    android:layout_marginRight="20dp"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fb_icon"
                    android:layout_marginRight="20dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fb_icon" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:layout_gravity="right|center"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/skip_arrow_image"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Skip"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>





    </RelativeLayout>

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/appauth_96dp"
                android:visibility="gone"
                android:contentDescription="@string/openid_logo_content_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intro_header"
                android:visibility="gone"
                style="@style/Base.TextAppearance.AppCompat.Title" />

            <!--
            displayed while the discovery document is loaded, and dynamic client registration is
            being negotiated
            -->
            <LinearLayout
                android:id="@+id/loading_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:gravity="center">

                <TextView
                    android:id="@+id/loading_description"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminate="true"/>

            </LinearLayout>

            <!-- Displayed once the authorization server configuration is resolved -->
            <LinearLayout
                android:id="@+id/auth_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/start_auth"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/auth_options"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_hint_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_value"
                        android:inputType="textEmailAddress"
                        android:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_id_description"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/browser_selector"
                    android:text="@string/browser_selector_label"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/browser_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/pending_intents_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/auth_endpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:visibility="gone" />

            </LinearLayout>

            <!-- displayed if there is an error. -->
            <LinearLayout
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:gravity="center">

                <TextView
                    android:id="@+id/error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    style="@style/Base.TextAppearance.AppCompat.Body1"/>

                <Button
                    android:id="@+id/retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
<!--    </androidx.core.widget.NestedScrollView>-->
</RelativeLayout>

